[gd_scene load_steps=7 format=3 uid="uid://cb56542u17jxv"]

[ext_resource type="Script" path="res://Scenes/Credits.gd" id="1_8uk15"]
[ext_resource type="AudioStream" uid="uid://uv8k7f5uo4kn" path="res://Audio/SFX/Menu/BreadGame Menu hover v.1.wav" id="2_iiuci"]
[ext_resource type="AudioStream" uid="uid://darp0oxy302a5" path="res://Audio/SFX/Menu/BreadGame Menu click A v.1.wav" id="3_ubsf8"]
[ext_resource type="AudioStream" uid="uid://plbw2e6ykpvl" path="res://Audio/Music/BreadGame MenuMusic MASTER v.1.mp3" id="4_8kx6m"]

[sub_resource type="ImageTexture" id="ImageTexture_ujyte"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c0tki"]
texture = SubResource("ImageTexture_ujyte")
modulate_color = Color(0, 0, 0, 1)

[node name="Credits Panel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_c0tki")

[node name="Credits Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.351563
anchor_top = 0.0601852
anchor_right = 0.65191
anchor_bottom = 0.276235
offset_bottom = -1.52588e-05
theme_override_font_sizes/normal_font_size = 100
text = "Credits"
metadata/_edit_use_anchors_ = true

[node name="Credits Title2" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.210069
anchor_top = 0.341049
anchor_right = 0.788194
anchor_bottom = 0.800926
offset_bottom = -1.52588e-05
theme_override_font_sizes/normal_font_size = 25
text = "TEAM MEMBERS

Jonathan Hacker	Team Coordinator
Mark Esparagoza	Gameplay Designer, Programmer
Jaden Corrado		Designer, Programmer
Poppy Payne		    Artist
I Have No Mouth	Composer, Sound Designer
Joseph Ellis		        Writer
"
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0295139
anchor_top = 0.782407
anchor_right = 0.171875
anchor_bottom = 0.933643
offset_bottom = -3.05176e-05
grow_vertical = 2
theme_override_font_sizes/font_size = 65
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="Credits" type="Node2D" parent="."]
script = ExtResource("1_8uk15")

[node name="CanvasLayer" type="CanvasLayer" parent="Credits"]

[node name="ButtonHover" type="AudioStreamPlayer2D" parent="Credits"]
stream = ExtResource("2_iiuci")

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="Credits"]
stream = ExtResource("3_ubsf8")

[node name="Menu Music" type="AudioStreamPlayer" parent="Credits"]
stream = ExtResource("4_8kx6m")

[connection signal="mouse_entered" from="Back" to="Credits" method="_on_back_mouse_entered"]
[connection signal="pressed" from="Back" to="Credits" method="_on_back_pressed"]
